Fix CSS syntax issues - remove empty declarations and fix spacing

--- a/css/modern.css
+++ b/css/modern.css
@@ -204,7 +204,7 @@ body{
     right:4%;
     padding: 10px;
     cursor: pointer;
-    transition: all.3s ease;
+    transition: all .3s ease;
     opacity: .8;
 }
 .navigation-close:hover{
@@ -228,7 +228,6 @@ body{
 #navigation-bar img{
     height: 80px;
     position: absolute;
-    ;
     top: 15%;
     left: 2.5%;
     opacity: .8;
@@ -329,7 +328,6 @@ body{
 .social-media{
     color: white;
     width:  21px;
-    ;
     opacity: .6;
     margin: 8px;
     transition: all .4s ease;
@@ -581,7 +579,6 @@ body{
     width:28%;
     margin: 1.5%;
     background-color: #191919;
-    ;
     display: inline-block;
     box-shadow:0px 0px 25px rgb(0,0,0,.05);
     position: relative;
